[package]
name = "pngkey"
version = "2.0.0"
authors = ["Smart-Space<smart-space@qq.com>"]
description = "A tool to encrypt and decrypt messages in PNG or JPG images using ChaCha20-Poly1305 and Argon2"
edition = "2024"

[profile.release]
strip = true
lto = true

[dependencies]
crc = "3.4.0"
clap = { version = "4.5.54", features = ["derive"] }
chacha20poly1305 = {version="0.10.1", features=["std"]}
argon2 = {version="0.5.3", features=["std"]}
base64 = "0.22.1"