[package]
name = "pngkey"
version = "3.1.0"
authors = ["Smart-Space<smart-space@qq.com>"]
description = "A tool to encrypt and decrypt messages in PNG, JPG or GIF images using ChaCha20-Poly1305 and Argon2"
edition = "2024"

[profile.release]
strip = true
lto = true

[dependencies]
crc = "3.4.0"
clap = { version = "4.5.54", features = ["derive"] }
chacha20poly1305 = {version="0.10.1", features=["std"]}
argon2 = {version="0.5.3", features=["std"]}
base64 = "0.22.1"
slint = { version = "1.4", optional = true, default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }

[features]
default = []
gui = ["slint"]

[build-dependencies]
slint-build = "1.14.1"